--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -9,6 +9,7 @@
     --crl-blue-grey: #6C91C2;
     --crl-white-grey: #C3C9E9;
     --crl-rose-red: #E71D36;
+    --crl--darker-blue: #383961;
     /* font-sizes */
     --fs-900: 9.375rem;
     --fs-800: 6.25rem;
@@ -30,6 +31,7 @@
 .bg-dark {
     background-color: hsl( var(--clr-dark));
 }
+
 .bg-accent {
     background-color: hsl( var(--clr-light));
 }
@@ -138,11 +140,16 @@
 
 
 /* Box sizing */
-
-*,
-*::before,
-*::after {
+*{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
+}
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
 
