--- a/front-end/src/css/about.css
+++ b/front-end/src/css/about.css
@@ -12,6 +12,7 @@
     flex-direction: column;
 }
 
+
 .about-container h1 {
     font-size: 2.5rem;
 }
@@ -80,4 +81,38 @@
     text-align: center;
     font-size: 1.5rem;
     color: white;
+}
+.front-ul{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.back-ul{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+@media (max-width:991px){
+    .about-project-container{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        align-items: center;
+    }
+    .about-container{
+        /* margin-top: 1rem; */
+        width: 90%;
+        margin: 2rem auto;
+    }
+}
+@media (max-width:991px){
+    .about-me-container{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding:1rem 2rem;
+        width: 90%;
+    }
 }
