--- a/front-end/src/css/createBlog.css
+++ b/front-end/src/css/createBlog.css
@@ -1,6 +1,21 @@
-.create-blog-container {
-    min-height: 100%;
-    /* height: 100vh; */
-    width: 100%;
+.create-blog-page{
+    width: 100vw;
+    height: 100%;
     background-image: linear-gradient(var(--crl-light-grey), var(--crl--darker-blue));
+    border: solid 1px transparent;
+    padding-bottom: 5rem;
+}
+.create-blog-container {
+    min-height: 70%;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 5rem;
+    padding: 2rem;
+    background-color: #f1f1f1;
+}
+@media (max-width:991px){
+    .create-blog-container{
+        width: 90%;
+        margin: 5rem auto;
+    }
 }
