--- a/front-end/src/css/footer.css
+++ b/front-end/src/css/footer.css
@@ -43,21 +43,29 @@
     margin-top: 1rem;
 }
 
-.display-none {
-    display: none;
-}
 
 .personal-info {
     position: absolute;
     margin-top: 10rem;
-    background: var(--myBlue);
+    background: var(--crl--darker-blue);
     color: white;
     width: 100%;
     text-align: center;
+    padding:1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
 }
-
 .info-email,
 .info-phone {
     display: block;
     font-size: 1.5rem;
+    color: white;
+    display: flex;
+    gap: 1rem;
+    text-decoration: none;
+}
+.display-none {
+    display: none;
 }
