--- a/front-end/src/css/home.css
+++ b/front-end/src/css/home.css
@@ -30,8 +30,13 @@
     background-color: var(--crl-charcoal);
     color: white;
     width: max(max-content,50%);
-    padding:1rem 2rem;
-    margin: 20px auto;
+    padding:2rem 4rem;
+    font-size: 30px;
+    text-decoration: none;
+    /* margin: 20px auto; */
+}
+.top-section-left-panel .get-started-button:hover{
+    opacity: 0.9;
 }
 .top-section-image-container{
     padding:1rem;
@@ -49,13 +54,31 @@
 }
 
 .search{
-    margin-top: 4rem;
-    border: solid 1px red;
+    margin-top: 10rem;
     display: grid;
+    align-items: center;
     grid-template-columns: 2fr 1fr;
 }
+.search-right-panel{
+    max-height: 422px;
+}
+@media (max-width:1130px){
+    .search-left-panel-inner{
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .search{
+        display: flex;
+        flex-direction: column;
+    }
+    .search-left-panel{
+        order: 2;
+    }
+    .search-right-panel{
+        order: 1;
+    }
+}
 .search-left-panel{
-    border: solid 1px red;
     padding: 2rem;
     display: flex;
     flex-direction: column;
@@ -64,12 +87,14 @@
 }
 .search-left-panel-inner{
     display: flex;
+    gap: 1rem;
 }   
 .search-left-panel-inner-div{
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 5rem 2rem;
+    border-radius: 4px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .search-left-panel-inner-div-inner{
@@ -81,19 +106,24 @@
     font-weight: bold;
 }
 .create{
-    margin-top: 5rem;
-    border: solid 1px red;
+    margin-top: 10rem;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr 1fr;
+    padding: 1rem clamp(2rem,5%,10rem);
+}
+.create-left-panel{
+    max-height: 422px;
+    margin-left: 2rem;
 }
 .create-right-panel{
-    border: solid 1px red;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1rem;
     padding: 2rem;
+    border-radius: 4px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .create-right-panel-h3{
     font-size: 2rem;
@@ -105,139 +135,42 @@
 .create-right-panel-button{
     border: none;
     outline: none;
+    text-decoration: none;
+    font-size: 30px;
     background-color: var(--crl--darker-blue);
     color: white;
     cursor: pointer;
     border-radius: 100vmax;
     min-width: max-content;
-    padding: .75rem 3rem;
+    padding: 1.5rem 3rem;
+}
+.create-right-panel-button{
+    opacity: 0.9;
+}
+@media(max-width:991px){
+    .create{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
 }
 .accordion-container{
-    margin-top:5rem;
+    margin-top:10rem;
     padding-inline:2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
-.users-ratings{
-    margin-top: 5rem;
-}
-/* .home-page-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-row-gap: 3em;
-}
-
-.get-started {
-    text-align: center;
-    display: flex;
-    justify-self: center;
-    flex-direction: column;
-    background: var(--crl-blue-grey);
-    height: 30rem;
-}
-
-.get-started>h1 {
-    font-size: 3.5rem;
-}
-
-.get-started-button {
-    background-color: var(--crl--darker-blue);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    border-radius: 1%;
-    color: white;
-    width: 50%;
-    align-self: center;
-    flex-basis: 20%;
-    aspect-ratio: 1/3;
-}
-
-.create-blog-button {
-    background-color: white;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1.5rem;
-    border-radius: 1%;
-    color: var(--crl-charcoal);
-    width: 50%;
-    align-self: center;
-    justify-self: center;
-    white-space: normal;
-    margin-bottom: 0.5rem;
-}
-
-.woman-reading {
-    justify-self: stretch;
-    height: 30rem;
-    background: var(--crl-blue-grey);
-}
-
-.search {
+.users-ratings-section{
+    margin-top: 10rem!important;
     display: flex;
     flex-direction: column;
-    color: black;
-    text-align: center;
-    font-size: 2rem;
+    align-items: center;
+    margin: 0 auto;
+    gap: 3rem;
 }
-
-.name-topic-random {
-    display: flex;
-    flex-direction: row;
-    font-size: 1.5rem;
-    gap: 1rem;
+.users-ratings-section h3{
+    font-size: 30px;
+    font-weight: bold;
+    text-transform: capitalize;
 }
-
-.name,
-.topic,
-.random {
-    display: flex;
-    flex-direction: column;
-    border: solid 2px var(--crl-charcoal);
-}
-
-.create {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    text-align: center;
-    font-size: 2rem;
-}
-
-.create>p {
-    width: 80%;
-}
-
-.search,
-.grid-react-image {
-    background: white;
-    height: 100%;
-}
-
-.create,
-.grid-node-image {
-    background: var(--crl-charcoal);
-    height: 100%;
-}
-
-.grid-col-span-2 {
-    grid-column: span 2;
-}
-
-.grid-col-span-3 {
-    grid-column: span 3;
-}
-
-.faq {
-    text-align: center;
-    font-size: 3.5rem;
-}
-
-.home-page-container p {
-    overflow: hidden;
-}
-.brd-red{
-    border: solid 1px red;
-} */
