--- a/front-end/src/css/usersRating.css
+++ b/front-end/src/css/usersRating.css
@@ -6,12 +6,19 @@
     margin: 0 auto;
     gap: 1rem;
 }
-
+@media (max-width:991px){
+    .users-container{
+        gap: 2.75rem;
+    }
+}
 .user-rating-container {
+    padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     border: solid 2px var(--crl-charcoal);
+    gap: 1rem;
 }
 
 .img-quote {
@@ -21,7 +28,13 @@
     font-weight: bold;
     /* font-family: 'Pushster', cursive; */
 }
-
+@media (max-width:991px){
+    .img-quote{
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+    }
+}
 .star-rating {
     margin: 0 auto;
 }
