--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pushster&family=Roboto&display=swap');
 body {
     margin: 0;
+    padding:0;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Pushster', cursive;
     font-family: 'Roboto', sans-serif;
